crates/htvg-core/tests/snapshots/playbadges_snapshot__playbadge_dark.snap
---
source: crates/htvg-core/tests/playbadges_snapshot.rs
expression: result.svg
---
<?xml version="1.0" encoding="UTF-8"?>
<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="350.00" height="150.00" viewBox="0 0 350.00 150.00"><rect x="0.00" y="0.00" width="350.00" height="150.00" rx="24.00" fill="#000000"/><rect x="1.00" y="1.00" width="348.00" height="148.00" rx="24.00" fill="none" stroke="#1f2937" stroke-width="2.00"/><defs><clipPath id="img-clip-0"><rect x="14.00" y="15.00" width="120.00" height="120.00" rx="16.00"/></clipPath></defs><image x="14.00" y="15.00" width="120.00" height="120.00" xlink:href="https://play-lh.googleusercontent.com/example-icon" clip-path="url(#img-clip-0)"/><text fill="#ffffff" font-family="'sans-serif', sans-serif" font-size="20.00" font-weight="600"><tspan x="150.00" y="30.92">VR</tspan><tspan x="150.00" y="54.92">Compatibility</tspan><tspan x="150.00" y="78.92">Checker</tspan></text><text x="150.00" y="75.14" fill="#4ade80" font-family="'sans-serif', sans-serif" font-size="16.00" font-weight="600">pavi2410</text><text x="150.00" y="134.14" fill="#ffffff" font-family="'sans-serif', sans-serif" font-size="16.00" font-weight="600">150K</text><text fill="#9ca3af" font-family="'sans-serif', sans-serif" font-size="16.00" font-weight="400"><tspan x="238.00" y="134.14">4.4 ★</tspan><tspan x="238.00" y="153.34">(1.2K)</tspan></text></svg>
